--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Web.config
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Web.config
@@ -4,6 +4,11 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <connectionStrings>
+    <!-- Database connection string-->
+    <add name ="ConnStr" connectionString = "Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\guanw\Desktop\github\WhiteNBlack\Application\SmokeFreeApplication\SmokeFreeApplication\App_Data\SmokeFree.mdf;Integrated Security=True" providerName = "System.Data.SqlClient" />
+
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
