--- a/Application/SmokeFreeApplication/SmokeFreeApplication/bin/SmokeFreeApplication.dll.config
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/bin/SmokeFreeApplication.dll.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <connectionStrings>
+    <!-- Database connection string-->
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
