--- a/Application/SmokeFreeApplication/SmokeFreeApplication/bin/SmokeFreeApplication.dll.config
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/bin/SmokeFreeApplication.dll.config
@@ -6,6 +6,8 @@
 <configuration>
   <connectionStrings>
     <!-- Database connection string-->
+    <add name ="ConnStr" connectionString = "Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\guanw\Desktop\github\WhiteNBlack\Application\SmokeFreeApplication\SmokeFreeApplication\App_Data\SmokeFree.mdf;Integrated Security=True" providerName = "System.Data.SqlClient" />
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
