--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Web.config
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Web.config
@@ -5,12 +5,12 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <!-- Database connection string-->
-    <add name ="ConString" connectionString ="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\SmokeFree.mdf;Integrated Security=False; Connect Timeout = 30"/>
+    <add name="ConString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\SmokeFree.mdf;Integrated Security=False; Connect Timeout = 30" />
     <add name="ConnStr" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\SmokeFree.mdf;Integrated Security=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -20,10 +20,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <sessionState mode="InProc" cookieless="false" timeout="80"/>
+    <sessionState mode="InProc" cookieless="false" timeout="80" />
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
-    <authentication mode ="Windows"/>
+    <authentication mode="Windows" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
