Added a db to play around
Updated gitignore file. Hopefulyl i wont see those build files being tracked again.

--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,7 @@
 *.css
 *.config
 Application/SmokeFreeApplication/.vs/SmokeFreeApplication/config/applicationhost.config
-*.config
-*.config
+
+*.force
+*.cache
+*.pdb
