Revert "Added a db to play around"
This reverts commit ad17059fab3c5dccaef6e68c44ae1b6374635098.

--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,5 @@
 *.css
 *.config
 Application/SmokeFreeApplication/.vs/SmokeFreeApplication/config/applicationhost.config
-
-*.force
-*.cache
-*.pdb
+*.config
+*.config
