--- a/Application/SmokeFreeApplication/SmokeFreeApplication/bin/SmokeFreeApplication.dll.config
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/bin/SmokeFreeApplication.dll.config
@@ -10,8 +10,8 @@
   </configSections>
   <connectionStrings>
     <!-- Database connection string-->
-    <add name ="ConString" connectionString ="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\SmokeFree.mdf;Integrated Security=False; Connect Timeout = 30"/>
-    <add name="ConnStr" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\SmokeFree.mdf;Integrated Security=False" providerName="System.Data.SqlClient" />
+    <add name ="DefaultConnection" connectionString ="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\SmokeFreeDBContext.mdf;Integrated Security=True; Connect Timeout = 30"/>
+    <add name="SmokeFreeDBContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\SmokeFreeDBContext.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
