added comment model

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@
 Application/SmokeFreeApplication/.vs/SmokeFreeApplication/config/applicationhost.config
 *.config
 *.config
+Application/SmokeFreeApplication/.vs/SmokeFreeApplication/config/applicationhost.config
