created viewArticle view

--- a/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
@@ -219,6 +219,7 @@
     <Content Include="Views\Account\SignInDoctor.cshtml" />
     <Content Include="Views\Doctor\DrProfile.cshtml" />
     <Content Include="Views\InterestedParty\MemberProfile.cshtml" />
+    <Content Include="Views\Doctor\createArticle.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
