Added simple headers for sign in pages
For admin, doctor, and member, a <h3>
header was added to easily differentiate which login mode was selected.

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ Application/SmokeFreeApplication/.vs/SmokeFreeApplication/config/applicationhost
 *.config
 *.config
 Application/SmokeFreeApplication/.vs/SmokeFreeApplication/config/applicationhost.config
+*.cache
