implemented basic view/create function for comments on story page
yeap

--- a/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
@@ -252,12 +252,12 @@
     <Content Include="Views\Doctor\DrProfile.cshtml" />
     <Content Include="Views\InterestedParty\MemberProfile.cshtml" />
     <Content Include="Views\Doctor\createArticle.cshtml" />
-    <Content Include="Views\Comments\CreateStoryComment.cshtml" />
+    <Content Include="Views\Comments\CreateComment.cshtml" />
     <Content Include="Views\Comments\Delete.cshtml" />
     <Content Include="Views\Comments\Details.cshtml" />
     <Content Include="Views\Comments\Edit.cshtml" />
     <Content Include="Views\Comments\Index.cshtml" />
-    <Content Include="Views\Comments\ViewStoryComment.cshtml" />
+    <Content Include="Views\Comments\ViewComment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
