scaffolded the view of articles
Scaffold article views (similar to story) so that I could implement article comments

--- a/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
@@ -279,6 +279,7 @@
     <Content Include="Views\Admin\_doctorControl.cshtml" />
     <Content Include="Views\Admin\_LayoutViewDoctor.cshtml" />
     <Content Include="Views\Admin\_ViewDoctor.cshtml" />
+    <Content Include="Views\Article\ViewArticle.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
