--- a/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\Content.cs" />
     <Compile Include="Models\DoctorCompoundModel.cs" />
+    <Compile Include="Models\InterestedPartyCompoundModel.cs" />
     <Compile Include="Models\Progress.cs" />
     <Compile Include="Models\SmokeFreeDBContext.cs" />
     <Compile Include="Models\Doctor.cs" />
