--- a/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
@@ -344,7 +344,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Article\Articles.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Account\SignInMember.cshtml" />
+    <Content Include="Views\Account\SignIn.cshtml" />
     <Content Include="Views\Account\SignUpMember.cshtml" />
     <Content Include="Views\Story\Stories.cshtml" />
     <Content Include="Views\Story\CreateStory.cshtml" />
@@ -363,8 +363,6 @@
     <Content Include="Views\Admin\_TopBarAdmin.cshtml" />
     <Content Include="Views\Admin\_postControl.cshtml" />
     <Content Include="Views\Account\SignInAdmin.cshtml" />
-    <Content Include="Views\Account\_SignInLayout.cshtml" />
-    <Content Include="Views\Account\SignInDoctor.cshtml" />
     <Content Include="Views\Doctor\DrProfile.cshtml" />
     <Content Include="Views\InterestedParty\MemberProfile.cshtml" />
     <Content Include="Views\Article\createArticle.cshtml" />
