--- a/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/SmokeFreeApplication.csproj
@@ -390,6 +390,7 @@
     <Content Include="Views\Account\SignUpSuccessMember.cshtml" />
     <Content Include="Views\Doctor\EditDrProfile.cshtml" />
     <Content Include="Views\Admin\BoardcastMessage.cshtml" />
+    <Content Include="Views\Home\_PopUp.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
